# csg-testsuite

./: .hgignore  CMakeLists.txt  Makefile.am  configure.ac
csg/: NOTIFY  runtests.sh
csg/csg_propery/: run.sh
csg/csg_resample/: resample.in  resampled.ref  resampled_akima_periodic.ref  resampled_cubic_natural.ref  resampled_cubic_periodic.ref  resampled_linear_natural.ref  run.sh
csg/generic/: fitted.ref  resampled.ref  run.sh  test.xml
csg/iterative_spce/: NOTIFY  confout.gro  grompp.mdp  run.sh  traj.xtc
csg/mapping/: grompp.mdp  pdb_ref.gro  run.sh  topol_pdb.xml  topol_rename.xml  tpr_ref.gro  water1.xml  water2.xml  water_pdb.xml  xml_ref.gro
csg/nblist/: CG-CG.ref  CG-CG_1x1x1.ref  CG-CG_2x2x2.ref  CG-CG_3x3x3.ref  CG-CG_4x4x4.ref  NOTIFY  run.sh  settings_1x1x1.xml  settings_2x2x2.xml  settings_3x3x3.xml  settings_4x4x4.xml
csg/propane_single_chain/: NOTIFY  grompp.mdp  run.sh  run_atomistic.sh  settings.xml  settings_constrained.xml
kmc/: Makefile.am  comp.pl  runtests.sh  test.cpp
md2qm/basic/: CGtraj.pdb.ref  NOTIFY  QMtraj.pdb.ref  nbl_votca.ref  run.sh
md2qm/ctp_irc/: run.sh
md2qm/data/: list_charges.xml  main.xml  norma_ch3.xml  topol.tpr  traj.xtc
md2qm/integrals/: nbl_int_only.ref  run.sh
md2qm/kmc/: kmc_cont.ref  run.sh
md2qm/kmc_cont/: kmc_cont.ref  run.sh
md2qm/map/: nbl_votca.res  run.sh
md2qm/printQM-CG/: CGtraj.ref  QMtraj.ref  run.sh
moo/: Makefile.am  overlap_integral.cc  runtests.sh
tools/: CMakeLists.txt  Makefile.am  basic.cc  property_test.cc  runtests.sh  spline_test.cc  test.xml  version_test.cc
(+58 files in other folders)
